[package]
name = "byteorder_slice"
version = "0.2.0"
authors = ["courvoif <courvoif@pm.me>"]
edition = "2018"
description = "Byteorder like crate for &[u8]"

license = "MIT"
documentation = "https://docs.rs/byteorder_slice/"
repository = "https://github.com/courvoif/byteorder_slice"

[features]
default = []
byteorder_compat = ["byteorder"]

[dependencies]
byteorder = { version = "*", optional = true }